--- a/vis/Dia2Sharp/Dia2Sharp.csproj
+++ b/vis/Dia2Sharp/Dia2Sharp.csproj
@@ -73,6 +73,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DebugHelp.cs" />
+    <Compile Include="MinSym.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reflectors.cs" />
     <Compile Include="Sym.cs" />
