VS plugin been not exactally working lately, however, _ALMOST_ ready to add symbols into the MSAGL graphs, including dissassembly and stuff!

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,13 @@ Network Trash Folder
 Temporary Items
 .apdisk
 *.cache
+*.obj
+*.log
+*.pdb
+*.pch
+*.tlog
+*.ipch
+*.ilk
+*.ipdb
+*.iobj
+*.user
