Recovering state from weird upload issue ;)
Lost a bit of work will be re-testing new graphing soon

--- a/prep/Agasm/Agasm.vcxproj
+++ b/prep/Agasm/Agasm.vcxproj
@@ -20,7 +20,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{42B676B2-F551-49E7-9B3B-BB85B02F15AC}</ProjectGuid>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <Keyword>ManagedCProj</Keyword>
     <RootNamespace>Agasm</RootNamespace>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
@@ -157,6 +157,11 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="app.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\vis\Dia2Sharp\Dia2Sharp.csproj">
+      <Project>{fb72e2ee-7b32-4879-9b2b-35fb3cdf0fcc}</Project>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
