--- a/vis/Dia2Sharp/Dia2Sharp.csproj
+++ b/vis/Dia2Sharp/Dia2Sharp.csproj
@@ -72,6 +72,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AModInfo.cs" />
+    <Compile Include="AStepEvent.cs" />
     <Compile Include="DebugHelp.cs" />
     <Compile Include="MinSym.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
