--- a/vis/WPFx/WPFx.csproj
+++ b/vis/WPFx/WPFx.csproj
@@ -118,6 +118,10 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\prep\TottsA\TottsA.csproj">
+      <Project>{b42aa518-62ad-49c7-8976-85e94b1593b5}</Project>
+      <Name>TottsA</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Dia2Sharp\Dia2Sharp.csproj">
       <Project>{fb72e2ee-7b32-4879-9b2b-35fb3cdf0fcc}</Project>
       <Name>Dia2Sharp</Name>
