--- a/prep/Acleanout/Acleanout.vcxproj
+++ b/prep/Acleanout/Acleanout.vcxproj
@@ -147,7 +147,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\EhTrace\GlobLog.h" />
+    <ClInclude Include="..\..\EhTrace\GlobLog.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
