DEBUG_MSR write method for legacy/cloud users
You may need to use DEBUIG_MSR boot system with bcdedit /set debug on
for this to be exposed

--- a/EhTrace/EhTrace.vcxproj
+++ b/EhTrace/EhTrace.vcxproj
@@ -105,6 +105,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;_USRDLL;EHTRACE_EXPORTS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalIncludeDirectories>..\support\capstone</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -157,11 +158,13 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Config.h" />
     <ClInclude Include="GlobLog.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Config.cpp" />
     <ClCompile Include="DebugSupp.cpp" />
     <ClCompile Include="EhTrace.cpp" />
     <ClCompile Include="GlobLog.cpp" />
